# pigx_sars-cov-2

./: .gitignore  Makefile.am  VERSION  configure.ac  guix.scm  manifest.scm  snakefile.py  test.sh.in
.github/workflows/: build.yml
etc/: settings.yaml.in
scripts/: create_summary_table.R  creating_mutation_summary_table.R  creating_variants_summary_table.R  deconvolution.R  deconvolution_funs.R  download_databases.sh.in  fun_index.R  index.R  index_funs.R  index_orig.R  mutation_parsing_funs.R  mutation_regression.R  overview_QC_table.R  pooling.R  pred_mutation_increase.R  renderReport.R  sample_coverage_score.R  table_extraction.R  variantreport_p_sample.R
scripts/report_scripts/: index.Rmd  qc_report_per_sample.Rmd  variantreport_p_sample.Rmd
snakefile_scripts/: download_tarball.py  rule_reproducify.py
tests/: manual_run_env.sh.in  settings.yaml
tests/full/: test.sh.in
tests/start_bam/: settings.yaml  test.sh.in
tests/start_vcf/: settings.yaml  test.sh.in
tests/vep_test/: vep.sh.in
